--- a/src/components/book/book.css
+++ b/src/components/book/book.css
@@ -7,6 +7,11 @@
     align-items: center;
 }
 
+.book:focus {
+    background: #E8DEDE;
+    transform: scale(1.01);
+}
+
 .book + .book {
     margin-top: 26px;
 }
